# openusage

./: .gitignore  README.md  package.json
.agents/skills/release-tag/: SKILL.md
.github/workflows/: publish-agent.yml  publish.yml
crates/openusage-agent/: Cargo.toml
crates/openusage-agent/src/: main.rs
crates/openusage-plugin-engine/: Cargo.toml
crates/openusage-plugin-engine/src/: config.rs  host_api.rs  lib.rs  manifest.rs  runtime.rs
crates/openusage-relay/: Cargo.toml  Dockerfile
crates/openusage-relay/src/: main.rs
crates/openusage-shared/: Cargo.toml
crates/openusage-shared/src/: lib.rs
docs/providers/: synthetic.md
plugins/claude/: plugin.test.js
plugins/cursor/: plugin.test.js
plugins/opencode-go/: plugin.js  plugin.json  plugin.test.js
plugins/synthetic/: plugin.js  plugin.json  plugin.test.js
scripts/install/: install-agent.ps1  install-agent.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  panel.rs  tray.rs
src-tauri/src/plugin_engine/: host_api.rs  mod.rs
src-tauri/src/sync/: mod.rs  relay_client.rs  token.rs
src/components/: machine-badge.tsx  side-nav.tsx  sync-settings.tsx
src/components/app/: app-shell.tsx
src/hooks/app/: use-settings-bootstrap.ts  use-settings-plugin-actions.test.ts  use-settings-plugin-actions.ts  use-sync.ts
src/lib/: aggregate-metrics.test.ts  aggregate-metrics.ts  settings.ts  sync-types.ts
src/pages/: overview.tsx  provider-detail.tsx  settings.tsx
src/stores/: app-sync-store.ts
