[package]
name = "openusage-plugin-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
base64 = "0.22"
reqwest = { version = "0.13", features = ["blocking", "socks"] }
rquickjs = { version = "0.11", features = ["bindgen"] }
aes-gcm = "0.10.3"
regex-lite = "0.1.9"
dirs = "6"
time = { version = "0.3.47", features = ["formatting", "parsing"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"], default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "vendored"], default-features = false }
