[package]
name = "openusage-relay"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "openusage-relay"
path = "src/main.rs"

[dependencies]
openusage-shared = { path = "../openusage-shared" }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["limit"] }
time = { version = "0.3", features = ["formatting"] }
log = "0.4"
env_logger = "0.11"
